phase 1/2 updates
